[package]
name = "mac-notify"
version = "0.1.0"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
edition = "2018"

[dependencies]
pnet_datalink = {version = "0.22.0"}
ipnetwork = "0.14.0"
prettytable-rs = "0.7.0"
clap = "2.31.2"
reqwest = "0.9.18"
tokio = "0.1.21"
futures = "0.1.28"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"

[dependencies.pnet]
features = ["serde"]
version = "0.22.0"
